--- a/index.css
+++ b/index.css
@@ -1,8 +1,45 @@
 body {
-    background-color: black;
+  text-align: center;
+  align-items: center;
+  display: block;
+  margin: auto;
+  height: auto;
+  width: auto;
+  background-color: rgb(53, 49, 49);
+}
+a {
+  text-decoration: none;
+  color:rgb(106, 107, 104);
+  outline: none;
+}
+.buttons {
+  position: absolute;
+  top: 2%;
+  right: 0%;
+  font-size: 30px;
+  text-align: right;
+  letter-spacing: 20px;
 }
 
-#headerMenu {
-    display: inline-block;
-    background-color:rgb(208, 233, 255);
+.middleName {
+  position: absolute;
+  top: 50%;
+  right: 50%;
+  font-size: 30px;
+  text-align: center;
+  letter-spacing: 20px;
+}
+
+#aboutLink, #careerLink{
+  -webkit-transition: letter-spacing 1s ease, margin-left 1s ease;
+  transition: letter-spacing 1s ease, margin-left 1s ease;
+  display: block;
+  margin-right: 0px;
+  transition: 0.3s;
+  letter-spacing: 15px;
+}
+
+#aboutLink:hover, #careerLink:hover{
+  transition: 0.4s;
+  letter-spacing: 35px;
 }
